# transport_hegemon

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py
buildsys/conan/package/shaderc/: conanfile.py
buildsys/conan/package/shaderc/patch/: fix-cmake.patch
buildsys/conan/profile/: windows_debug  windows_default
cmake/: cpp_standard.cmake  lto.cmake  opt.cmake  warning.cmake
script/linux/: conan_dep.sh
script/windows/: conan_dep.bat
src/: main.cpp
